<resources>
    <string name="app_name">Pract_7</string>
    <string name="email">Email</string>
    <string name="my_app_7">My App 7</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sale">Sale</string>
    <string name="contactsText">Контакты</string>
    <string name="proNasText">Про Нас</string>
    <string name="glavnayaText">Главная</string>
    <string name="slishKupi">СлышКупи</string>
    <string name="kurs">Курс</string>
    <string name="filter">filter</string>
    <string name="aaa">aaa</string>
    <string name="courses_rus">Курсы</string>
    <string name="java_course">java Course</string>
    <string name="todo">TODO</string>
    <string name="course_start_date">Старт обучения: </string>
    <string name="course_level">Уровень: </string>

    <string name="course_desc">Программа обучения Java рассчитана на новичков в данной сфере. За программу вы изучите построение
        графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Android-приложений
        и отлично изучите сам язык Java!</string>

    <string name="course_desc_py">Программа обучения Python рассчитана на новичков в данной сфере. За программу вы изучите построение
        графического пользовательского интерфейса под ПК, разработку нейронных сетей, изучите построение полноценных приложений
        и отлично изучите сам язык Python!</string>

    <string name="text">Text</string>
</resources>

