<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:contentDescription="@string/my_app_7"
        android:padding="10dp"
        android:src="@drawable/ya_sdam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/lightgrey"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/lightgrey"
        android:hint="@string/password"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email"></EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="#11D8C5"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"></Button>

    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:background="#11D8C5"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>

